# serializer version: 1
# name: TestPosterTemplate.test_topic_from_other_public_forum_in_topics_view[topic_from_other_public_forum_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Adam O.
                  </a>,
              
              
                  dans <a href="forum_url">Abby's Forum</a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_its_own_public_forum[topic_in_its_own_public_forum]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Adam O.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_topics_view[topic_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Adam O.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestTopicListView.test_anonymous_content[anonymous_action_box]
  '''
  <section class="s-section" id="action-box">
              <div class="s-section__container container">
                  <div class="s-section__row row">
                      <div class="s-section__col col-12">
                          <div class="c-box mb-5">
                              <div class="row">
                                  <div class="col-lg col-12 mb-3">Je me connecte pour accéder à toutes mes thématiques</div>
                                  <div class="col-lg-auto col-12">
  
  
      <a class="btn btn-outline-primary btn-ico btn-block" href="/users/login/?next=%2Ftopics%2F">Se connecter | S'inscrire</a>
  
  </div>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </section>
  '''
# ---
# name: TestTopicListView.test_clickable_tags[10-query_param1-clickable_tags_page2][clickable_tags_page2]
  '<button class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?tag=tag&amp;filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filtertopics-button">tag</button>'
# ---
# name: TestTopicListView.test_clickable_tags[None-query_param0-clickable_tags_page1][clickable_tags_page1]
  '<button class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?tag=tag&amp;filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filtertopics-button">tag</button>'
# ---
# name: TestTopicListView.test_filter_dropdown_with_tags[filter_dropdown_with_tags]
  '''
  <div class="dropdown-menu dropdown-menu-end" id="filterTopicsDropdown">
                          <ul class="list-unstyled">
                              
                                  <li>
                                      <button class="dropdown-item matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL&amp;tag=tag" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filter-ontag-button">les plus récentes</button>
                                  </li>
                              
                                  <li>
                                      <button class="dropdown-item matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=NEW&amp;tag=tag" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filter-ontag-button">en attente de réponse</button>
                                  </li>
                              
                          </ul>
                      </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_filter[ALL-<lambda>-None][ALL-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_filter[NEW-<lambda>-<lambda>][NEW-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      en attente de réponse
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[-<lambda>-None][-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[buckley-<lambda>-<lambda>][buckley-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">1 question</span>
                      les plus récentes
                      
                          <span class="fs-sm">
                              sous l'étiquette
                              <button aria-label="Supprimer ce filtre" class="tag bg-info text-white matomo-event" data-bs-placement="top" data-bs-title="Supprimer ce filtre" data-bs-toggle="tooltip" data-matomo-action="unfilter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="unfilter-ontag-button">
                                  <i class="ri-close-fill ri-xs"></i>buckley
                              </button>
                          </span>
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[tag-<lambda>-<lambda>][tag-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                          <span class="fs-sm">
                              sous l'étiquette
                              <button aria-label="Supprimer ce filtre" class="tag bg-info text-white matomo-event" data-bs-placement="top" data-bs-title="Supprimer ce filtre" data-bs-toggle="tooltip" data-matomo-action="unfilter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="unfilter-ontag-button">
                                  <i class="ri-close-fill ri-xs"></i>tag
                              </button>
                          </span>
                      
                  </div>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/forum-b-[PK of Forum]/">Forum B</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_toplevel_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[documentation_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-[PK of Forum]/">D Category</a>
                      </li>
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-forum-[PK of Forum]/">D Category - Forum</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
